# jobhunter

./: .env.example  .gitignore  LICENSE  README.md  jobs.json  match_config.json  pyproject.toml  ranked.json
examples/: matching_example.py  search_example.py
jobhunter/: __init__.py  config.py  models.py  report.py  server.py
jobhunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
jobhunter/cli/: __init__.py  main.py
jobhunter/llm/: __init__.py  base.py  claude.py  gemini_client.py  openai_client.py
jobhunter/matching/: __init__.py  cv_parser.py  matcher.py  prompts.py
jobhunter/search/: __init__.py  apify_actors.py  filters.py  searcher.py
tests/: test_filters.py  test_models.py
